Fix broken styles for Distributer component

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -61,7 +61,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 40px;
+  padding: 30px;
   background: #edf5fb;
 }
 
